# jolt.net

./: jolt.net.sln
Jolt.Native/: CMakeLists.txt
Jolt.Native/src/: Statics.cpp
Jolt.Native/src/Core/: BodyInterface.cpp  JobSystem.cpp  TempAllocator.cpp  TempAllocatorImpl.cpp  TempAllocatorMalloc.cpp
Jolt.Native/src/JobSystem/: JobSystemThreadPool.cpp
Jolt.Native/src/Physics/: PhysicsSystem.cpp
Jolt.Native/src/Physics/Collision/Body/: Body.cpp  BodyCreationSettings.cpp  MotionProperties.cpp
Jolt.Native/src/Physics/Collision/BroadPhase/: BroadPhaseLayerInterface.cpp  BroadPhaseQuery.cpp
Jolt.Native/src/Physics/Collision/Shape/: BoxShape.cpp  ConvexShape.cpp  Shape.cpp  ShapeResult.cpp  SphereShape.cpp
Jolt.Net/: Jolt.Net.csproj  JoltStatics.cs  ObjectBase.cs  ObjectCache.cs
Jolt.Net/Core/: BodyInterface.cs  IJobSystem.cs  ITempAllocator.cs  TempAllocatorImpl.cs  TempAllocatorMalloc.cs
Jolt.Net/JobSystem/: JobSystemThreadPool.cs
Jolt.Net/Native/: Statics.cs
Jolt.Net/Native/Core/: BodyInterface.cs  JobSystem.cs  TempAllocator.cs  TempAllocatorImpl.cs  TempAllocatorMalloc.cs
Jolt.Net/Native/JobSystem/: JobSystemThreadPool.cs
Jolt.Net/Native/Physics/: PhysicsSystem.cs
Jolt.Net/Native/Physics/Body/: Body.cs  BodyCreationSettings.cs  MotionProperties.cs
Jolt.Net/Native/Physics/Collision/BroadPhase/: BroadPhaseLayerInterface.cs
Jolt.Net/Native/Physics/Collision/Shape/: BoxShapeSettings.cs  ConvexShape.cs  Shape.cs  ShapeResult.cs  ShapeSettings.cs  SphereShapeSettings.cs
Jolt.Net/Physics/: Activation.cs  PhysicsSystem.cs
Jolt.Net/Physics/Body/: Body.cs  BodyCreationSettings.cs  BodyID.cs  MotionProperties.cs  MotionQuality.cs  MotionType.cs
Jolt.Net/Physics/Collision/: PhysicsMaterial.cs
Jolt.Net/Physics/Collision/BroadPhase/: BroadPhaseLayerBase.cs  IBroadPhaseLayerInterface.cs
Jolt.Net/Physics/Collision/Shape/: BoxShape.cs  ConvexShape.cs  Shape.cs  SphereShape.cs
